Fix: fixed contrast checker warning styles.

--- a/packages/block-editor/src/components/global-styles/style.scss
+++ b/packages/block-editor/src/components/global-styles/style.scss
@@ -100,3 +100,7 @@
 	/*rtl:ignore*/
 	direction: ltr;
 }
+
+.block-editor-panel-color-gradient-settings__contrast-checker {
+	display: contents;
+}
